[package]
name = "hawkbit"
version = "0.1.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["api-bindings"]
description = "Client side API to interact with Eclipse hawkBit"
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.2"
strum = { version = "0.20", features = ["derive"] }
cfg-if = "1.0"
digest = { version = "0.9", optional = true }
md-5 = { version = "0.9", optional = true }
sha-1 = { version = "0.9", optional = true }
sha2 = { version = "0.9", optional = true }

[dev-dependencies]
structopt = "0.3"
anyhow = "1.0"
httpmock = "0.5"

[features]
hash-digest= ["digest"]
hash-md5 = ["md-5", "hash-digest"]
hash-sha1 = ["sha-1", "hash-digest"]
hash-sha256 = ["sha2", "hash-digest"]