[package]
name = "hawkbit_mock"
version = "0.1.0"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["development-tools::testing"]
description = "Mock server implementation of Eclipse hawkBit"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
hawkbit = { path = "../hawkbit/" }
httpmock = "0.5.4-alpha.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"