[package]
name = "hawkbit_mock"
version = "0.1.1"
authors = ["Guillaume Desmottes <guillaume.desmottes@collabora.com>"]
edition = "2018"
categories = ["development-tools::testing"]
description = "Mock server implementation of Eclipse hawkBit"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/collabora/hawkbit-rs"
documentation = "https://docs.rs/hawkbit/"

[dependencies]
hawkbit = { version = "0.1", path = "../hawkbit/" }
httpmock = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"